--- a/Hats/nbproject/project.properties
+++ b/Hats/nbproject/project.properties
@@ -33,11 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Hats
 excludes=
+file.reference.KControls-2.0.jar=lib\\KControls-2.0.jar
 file.reference.ojdbc11.jar=..\\..\\Login-Y-Registro-Java-main\\Login-Y-Registro-Java-main\\lib\\ojdbc11.jar
+file.reference.ojdbc11.jar-1=lib\\ojdbc11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc11.jar}
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.KControls-2.0.jar}:\
+    ${file.reference.ojdbc11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
