Agregue crud usuarios

--- a/Hats/nbproject/project.properties
+++ b/Hats/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Hats
 excludes=
+file.reference.flatlaf-3.5.1.jar=lib\\flatlaf-3.5.1.jar
+file.reference.flatlaf-demo-3.5.1.jar=lib\\flatlaf-demo-3.5.1.jar
 file.reference.KControls-2.0.jar=lib\\KControls-2.0.jar
 file.reference.ojdbc11.jar=..\\..\\Login-Y-Registro-Java-main\\Login-Y-Registro-Java-main\\lib\\ojdbc11.jar
 file.reference.ojdbc11.jar-1=lib\\ojdbc11.jar
@@ -42,7 +44,9 @@ javac.classpath=\
     ${file.reference.ojdbc11.jar}:\
     ${file.reference.KControls-2.0.jar}:\
     ${file.reference.ojdbc11.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.flatlaf-demo-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
