--- a/Hats/nbproject/project.properties
+++ b/Hats/nbproject/project.properties
@@ -33,8 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Hats
 excludes=
+file.reference.firebase-admin-9.3.0.jar=lib\\firebase-admin-9.3.0.jar
 file.reference.flatlaf-3.5.1.jar=lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-demo-3.5.1.jar=lib\\flatlaf-demo-3.5.1.jar
+file.reference.google-auth-library-oauth2-http-1.28.0.jar=lib\\google-auth-library-oauth2-http-1.28.0.jar
+file.reference.google-cloud-storage-2.43.1.jar=lib\\google-cloud-storage-2.43.1.jar
 file.reference.KControls-2.0.jar=lib\\KControls-2.0.jar
 file.reference.ojdbc11.jar=..\\..\\Login-Y-Registro-Java-main\\Login-Y-Registro-Java-main\\lib\\ojdbc11.jar
 file.reference.ojdbc11.jar-1=lib\\ojdbc11.jar
@@ -46,7 +49,10 @@ javac.classpath=\
     ${file.reference.ojdbc11.jar-1}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-3.5.1.jar}:\
-    ${file.reference.flatlaf-demo-3.5.1.jar}
+    ${file.reference.flatlaf-demo-3.5.1.jar}:\
+    ${file.reference.firebase-admin-9.3.0.jar}:\
+    ${file.reference.google-auth-library-oauth2-http-1.28.0.jar}:\
+    ${file.reference.google-cloud-storage-2.43.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
